src/tests/fixtures/extend_type/notExported.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
class Query {
  // No fields
}

/** @gqlField */
function greeting(_: Query): string {
  return `Hello World`;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_type/notExported.invalid.ts:7:10 - error: Expected a `@gqlField` function to be a named export.

7 function greeting(_: Query): string {
           ~~~~~~~~
